# wallpaper_manager

./: .gitignore  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  crops.rs  gallery.rs  lib.rs  main.rs  models.rs  paths.rs  records.rs  settings.rs  thumbnails.rs
src/components/: BatchPanel.tsx  CroppedGallery.tsx  ImageEditor.tsx  ImageGrid.tsx  RecropCompareModal.tsx  SettingsBar.tsx
src/components/cropped-gallery/: CroppedGalleryGrid.tsx  CroppedGalleryTable.tsx  CroppedPreviewOverlay.tsx  CroppedRecordCard.tsx  types.ts  useCroppedThumbQueue.ts
src/components/image-editor/: CropCanvas.tsx  ImageEditorInspector.tsx  ImageEditorToolbar.tsx  constants.ts  types.ts
src/utils/: previewCache.ts
