[package]
name = "wallhaven-crop-recorder"
version = "1.3.0"
description = "Wallhaven 图片裁剪记录器"
authors = ["0x727a"]
edition = "2021"

[lib]
name = "wallhaven_crop_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
base64 = "0.22"
tauri-plugin-dialog = "2"
walkdir = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
